--- a/style.css
+++ b/style.css
@@ -4,9 +4,18 @@ body {
     padding: 0px;
 }
 
+html {
+    font-size: 16px;
+}
+
+@media (max-height:850px) {
+    html {
+        font-size: 15px;
+    }
+}
+
 .main-container {
     width: 100vw;
-    height: 300vh;
 }
 
 .start-container {
@@ -17,7 +26,7 @@ body {
 .main-content {
     width: 89%;
     margin-left: 5.5%;
-    /* border: solid white; */
+    margin-right: 5.5%;
     height: 100%;
 }
 
@@ -33,6 +42,7 @@ body {
     color: #fff;
     font-family: 'DM Sans', sans-serif;
     font-weight: 400;
+    font-size: 1rem;
     list-style-type: none;
     display: inline-flex;
     justify-content: space-around;
@@ -48,6 +58,7 @@ body {
 .menu_li {
     display: inline-flex;
     color: #fff;
+    cursor: pointer;
 }
 
 .navbar_buttons {
@@ -80,11 +91,13 @@ body {
     height: 50px;
     border: 0px;
     width: 106px;
+    cursor: pointer;
 }
 
 .a {
     color: #ffff;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .main-frame {
@@ -103,7 +116,6 @@ body {
 }
 
 .text-content {
-    /* 111px.*/
     margin-top: 10%;
     width: 47%;
     height: 62%;
@@ -116,7 +128,7 @@ body {
 .tittle-h1 {
     font-family: 'Poppins';
     font-weight: 400;
-    font-size: 56px;
+    font-size: 3.5rem;
     line-height: 67px;
     color: white;
     padding-bottom: 22px;
@@ -127,7 +139,7 @@ body {
     color: white;
     font-family: 'DM Sans';
     font-weight: 400;
-    font-size: 18px;
+    font-size: 1.1em;
     line-height: 27px;
     margin: 0px;
 }
@@ -140,13 +152,14 @@ body {
 .green-button {
     color: white;
     font-family: 'DM Sans';
-    font-size: 16px;
+    font-size: 1rem;
     background-color: #22A45A;
     border: none;
     height: 50px;
     width: 172px;
     border-radius: 5px;
     margin-right: 16px;
+    cursor: pointer;
 }
 
 .watch {
@@ -157,11 +170,12 @@ body {
 .w-video {
     color: #fff;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 1rem;
     font-family: 'DM Sans';
     font-weight: 400;
     line-height: 24px;
     margin-right: 4px;
+    cursor: pointer;
 }
 
 .small-av {
@@ -201,11 +215,15 @@ body {
     margin-left: 79px;
 }
 
+.reviews-right {
+    height: 48px;
+}
+
 .reviews-p {
     margin: 0;
     color: #fff;
     font-family: 'DM Sans';
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 24px;
     font-weight: 400;
 }
@@ -214,6 +232,22 @@ body {
     position: absolute;
     margin-left: -103px;
     margin-top: 315px;
+}
+
+.main-images {
+    width: 47%;
+}
+
+.main-image-startscreen {
+    width: 100%;
+    height: auto;
+    box-sizing: cover;
+}
+
+@media (max-width:1300px) {
+    .main-vector {
+        margin-top: 215px;
+    }
 }
 
 /* ------------------------------------------------------------------------------ */
@@ -258,7 +292,7 @@ body {
     padding: 4px 8px 4px 8px;
     background-color: #FCD8CA;
     font-family: DM Sans;
-    font-size: 14px;
+    font-size: 0.88rem;
     font-weight: 400;
     line-height: 21px;
     margin: 0px;
@@ -274,10 +308,16 @@ body {
     padding-bottom: 29px;
     font-family: 'Poppins';
     font-weight: 400;
-    font-size: 48px;
+    font-size: 3rem;
     line-height: 58px;
     color: #1F2937;
     margin: 0px;
+}
+
+@media (max-height:820px) {
+    .base-title {
+        line-height: 50px;
+    }
 }
 
 .platform-paragraph {
@@ -288,7 +328,7 @@ body {
 .about-second-b {
     margin-top: 39px;
     font-family: 'DM Sans';
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 24px;
     width: 117px;
     height: 50px;
@@ -296,12 +336,13 @@ body {
     color: white;
     border: 1px solid #1F2937;
     background: #1F2937;
+    cursor: pointer;
 }
 
 /* ----------------------------------- a b o u t  c o u r s e s -------------------------------------- */
 
 .about-courses {
-    height: 100vh;
+    height: 91vh;
     width: 100vw;
     background-color: #ffff;
 }
@@ -313,8 +354,28 @@ body {
 
 .content-content-position {
     padding-top: 0px;
-    height: 592px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 82%;
+    width: 100%;
 }
+
+.main-image {
+    max-height: 100%;
+    width: auto;
+    display: block;
+}
+
+.text-content-about {
+    width: 47%;
+    height: 62%;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: stretch;
+}
+
 
 .paragraph {
     text-align: left;
@@ -324,7 +385,7 @@ body {
 .black-button {
     width: 135px;
     font-family: 'DM Sans';
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 24px;
     width: 117px;
     height: 50px;
@@ -332,6 +393,7 @@ body {
     color: white;
     border: 1px solid #1F2937;
     background: #1F2937;
+    cursor: pointer;
 }
 
 .arrow-links {
@@ -343,23 +405,31 @@ body {
 .arrow-button {
     color: #111827;
     font-family: 'DM Sans';
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 24px;
     text-decoration: none;
     margin-left: 16px;
     margin-right: 12px;
+    cursor: pointer;
 }
 
-.content-position2 {
-    display: flex;
-    align-items: flex-start;
-}
+@media (max-width:1230px) {
+    .padding-l {
+        padding-left: 20px;
+    }
 
-.about-courses2 {
-    height: 82vh;
-    width: 100vw;
-    background-color: #ffff;
+    .padding-r {
+        padding-right: 20px;
+    }
+
+    .paragraph {
+        text-align: justify;
+    }
+
+    .base-title-ab {
+        text-align: center;
+    }
 }
 
 /* ------------------------------------------ p o p u l a r  c o u r s e s -------------------------- */
@@ -376,12 +446,19 @@ body {
     height: 84.5%;
 }
 
+@media (max-height:820px) {
+    .main-content-pop {
+        height: 90%;
+    }
+}
+
 .pop-top {
     display: flex;
     flex-direction: row;
     justify-content: center;
     width: 100%;
     height: 180px;
+    padding-bottom: 10px;
 }
 
 .pop-top_content {
@@ -391,6 +468,17 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    text-align: center;
+}
+
+@media (max-width:1270px) {
+    .pop-top_content {
+        width: 60%;
+    }
+
+    html {
+        font-size: 14px;
+    }
 }
 
 .paragraph-pop {
@@ -403,6 +491,7 @@ body {
     grid-template-columns: 1fr 1fr 1fr;
     gap: 33px;
     height: 500px;
+    width: 100%;
 }
 
 .course {
@@ -417,13 +506,12 @@ body {
     width: 77px;
     height: 29px;
     font-family: 'DM Sans';
-    font-size: 14px;
+    font-size: 0.88rem;
     font-weight: 400;
     line-height: 21px;
-    letter-spacing: 0em;
     text-align: center;
     border-radius: 5px;
-    border: solid 1px #ffff
+    border: solid 1px #ffff;
 }
 
 .card-header {
@@ -434,7 +522,7 @@ body {
 .title-card {
     color: #ffff;
     font-family: 'Poppins';
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
     line-height: 34px;
     text-align: left;
@@ -443,32 +531,10 @@ body {
 .prise {
     color: #ffff;
     font-family: 'DM Sans';
-    font-size: 18px;
+    font-size: 1.1rem;
     font-weight: 400;
     line-height: 27px;
     text-align: left;
-}
-
-.green-button-card {
-    width: 142px;
-    height: 42px;
-    background-color: #22A45A;
-    font-family: DM Sans;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    text-align: center;
-    color: #ffff;
-    border: 1px solid #22A45A;
-    border-radius: 5px;
-    margin-left: 26px;
-    margin-bottom: 32px;
-    margin-top: 48.5%;
-}
-
-.card-img {
-    margin-right: 0px;
-    margin-bottom: 0px;
 }
 
 .card-bottom {
@@ -478,6 +544,50 @@ body {
     padding: 0px;
     display: flex;
     justify-content: space-between;
+}
+
+.green-button-card {
+    width: 142px;
+    height: 42px;
+    background-color: #22A45A;
+    font-family: 'DM Sans';
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: center;
+    color: #ffff;
+    border: 1px solid #22A45A;
+    border-radius: 5px;
+    margin-left: 26px;
+    margin-bottom: 32px;
+    margin-top: 48.5%;
+    cursor: pointer;
+}
+
+.card-img {
+    margin-right: 0px;
+    margin-bottom: 0px;
+}
+
+
+@media (max-width:1380px) {
+    .card-bottom {
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .green-button-card {
+        position: absolute;
+        margin-top: 196px;
+        margin-right: 15%;
+        width: 132px;
+    }
+}
+
+@media (max-width:1050px) {
+    .green-button-card {
+        width: 120px;
+    }
 }
 
 /* -------------------------------- c o m m u n i t y ----------------------------- */
@@ -499,12 +609,12 @@ body {
     background-color: #FCD8CA;
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
+    display: flex;
 }
 
 .text-content-community {
     margin: 64px;
-    width: 75%;
-    height: 76%;
+    flex-grow: 1;
 }
 
 .b-join-us {
@@ -513,7 +623,7 @@ body {
     background-color: #ffff;
     border: 1px solid #fff;
     font-family: 'DM Sans';
-    font-size: 14px;
+    font-size: 0.88rem;
     border-radius: 4px;
 }
 
@@ -525,6 +635,25 @@ body {
 .community-image {
     width: 50%;
     height: 100%;
+}
+
+@media (max-height:800px) {
+    .base-title-community {
+        font-size: 2.5rem;
+        margin-bottom: 0px;
+    }
+
+    .community-container-top_content {
+        width: 60%;
+    }
+
+    .base-title {
+        line-height: 50px;
+    }
+
+    .text-content-community {
+        width: 100%;
+    }
 }
 
 .community-container_bottom-grid {
@@ -541,7 +670,7 @@ body {
 
 .grid-green-part_tittle {
     font-family: 'Poppins';
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
     line-height: 34px;
     text-align: left;
@@ -549,7 +678,7 @@ body {
 
 .g-g-part_base-text {
     font-family: DM Sans;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 24px;
     text-align: left;
@@ -559,7 +688,6 @@ body {
 /* --------------------------------------------- b e n e f i t s ------------------------------ */
 
 .benefits {
-    /* 119h */
     height: 133.5vh;
     width: 100%;
 }
@@ -586,7 +714,7 @@ body {
     color: #4B5563;
     font-family: 'DM Sans';
     font-weight: 400;
-    font-size: 18px;
+    font-size: 1.1rem;
     line-height: 27px;
     margin: 0px;
 }
@@ -606,11 +734,28 @@ body {
     justify-content: space-around;
 }
 
+.grid-green-part {
+    background-image: url("./images/IMAGE_grow_your_knowledge.png");
+    background-size: cover;
+    background-position: center;
+}
+
 .button-com {
     height: 12.4%;
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    cursor: pointer;
+}
+
+@media (max-height:790px) {
+    .button-com {
+        height: calc(12.4%/2);
+    }
+
+    .benefits_grid-container {
+        padding-top: 40px;
+    }
 }
 
 /* ---------------------- f e e d  b a c k ----------------- */
@@ -662,7 +807,7 @@ body {
     margin: 32px;
 }
 
-.stars {
+.feedback-stars {
     margin-bottom: 32px;
 }
 
@@ -678,7 +823,7 @@ body {
 
 .account-lable {
     font-family: 'DM Sans';
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 24px;
     text-align: left;
@@ -687,9 +832,34 @@ body {
     margin: 0px;
 }
 
+@media (max-height:750px) {
+
+    .feedback-card_content {
+        margin: 16px;
+    }
+
+    .account-lable br {
+        display: none;
+    }
+
+    .account-lable {
+        display: flex;
+        align-items: center;
+    }
+
+    .account {
+        margin-top: 16px;
+    }
+
+    .feedback-stars {
+        margin-bottom: 16px;
+    }
+
+}
+
 .account-company {
     font-family: 'DM Sans';
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 24px;
     text-align: left;
@@ -699,7 +869,7 @@ body {
 /* ----------------------------- b l o g --------------------- */
 
 .blog {
-    height: 104vh;
+    min-height: 104vh;
     width: 100vw;
     background-color: #00353B;
     display: flex;
@@ -713,6 +883,12 @@ body {
 .blog-top {
     width: 100%;
     height: 102px;
+}
+
+@media (max-height:750px) {
+    .blog-top {
+        margin-top: 30px;
+    }
 }
 
 .lable-blog {
@@ -731,7 +907,7 @@ body {
 .base-title-blog {
     color: #fff;
     font-family: 'Poppins';
-    font-size: 48px;
+    font-size: 3rem;
     font-weight: 400;
     margin: 0px;
 }
@@ -740,7 +916,7 @@ body {
     width: 107px;
     height: 50px;
     font-family: DM Sans;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 24px;
     text-align: center;
@@ -748,6 +924,7 @@ body {
     border-radius: 8px;
     border: #fff solid 1px;
     background-color: #fff;
+    cursor: pointer;
 }
 
 .blog-bottom-grid {
@@ -756,7 +933,7 @@ body {
     grid-template-columns: 1fr 1fr 1fr;
     gap: 32px;
     width: 99%;
-    height: 604px;
+    height: 77%;
 }
 
 .blog-bottom-part {
@@ -769,12 +946,13 @@ body {
 .blog-img {
     margin: 0px;
     padding: 0px;
+    height: 50%;
 }
 
 .content-of-part {
     background-color: #fff;
     padding: 24px;
-    height: calc(50% - 48px);
+    height: 50%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -784,7 +962,7 @@ body {
     background-color: #AADEA8FF;
     color: #111827;
     font-family: 'DM Sans';
-    font-size: 14px;
+    font-size: 0.88rem;
     font-weight: 400;
     line-height: 21px;
     border-radius: 5px;
@@ -813,7 +991,7 @@ body {
 
 .tittle-card-blog {
     font-family: 'Poppins';
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
     line-height: 34px;
     text-align: left;
@@ -824,7 +1002,7 @@ body {
 
 .base-text-blog {
     font-family: DM Sans;
-    font-size: 15px;
+    font-size: 0.9rem;
     font-weight: 400;
     line-height: 24px;
     text-align: left;
@@ -834,12 +1012,19 @@ body {
 
 .arrow-links_blog {
     height: 40px;
+    cursor: pointer;
+}
+
+.blog-img {
+    max-width: 100%;
+    height: auto;
+    display: block;
 }
 
 /* -------------------------------- s t a r t  l e a r n i n g ------------------------ */
 
 .start-learn {
-    height: 50.3vh;
+    height: 433px;
     width: 100vw;
     background-color: #00353B;
     display: flex;
@@ -860,13 +1045,14 @@ body {
 .green-button-learn {
     color: white;
     font-family: 'DM Sans';
-    font-size: 16px;
+    font-size: 1rem;
     background-color: #22A45A;
     border: none;
     height: 50px;
     width: 135px;
     border-radius: 5px;
     margin-right: 16px;
+    cursor: pointer;
 }
 
 .buttons-learn {
@@ -876,13 +1062,14 @@ body {
 .white-button-learn {
     color: #1F2937;
     font-family: 'DM Sans';
-    font-size: 16px;
+    font-size: 1rem;
     background-color: #ffff;
     border: none;
     height: 50px;
     width: 135px;
     border-radius: 5px;
     margin-right: 16px;
+    cursor: pointer;
 }
 
 /* ---------------------------------- f o o t e r ------------------- */
@@ -893,9 +1080,16 @@ body {
     width: 100vw;
 }
 
+.flex-footer-column-content {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .footer-top-content {
     padding-top: 80px;
-    height: 336px;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -910,7 +1104,7 @@ body {
     padding-top: 59px;
     color: #fff;
     font-family: 'DM Sans';
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 24px;
     text-align: left;
@@ -936,7 +1130,7 @@ body {
     background-color: #22A45A;
     color: #fff;
     font-family: 'DM Sans';
-    font-size: 15px;
+    font-size: 0.9rem;
     font-weight: 400;
     line-height: 24px;
     display: flex;
@@ -950,7 +1144,7 @@ body {
 .text-under-input {
     color: #fff;
     font-family: 'DM Sans';
-    font-size: 12px;
+    font-size: 0.75rem;
     font-weight: 400;
     line-height: 18px;
     text-align: left;
@@ -958,6 +1152,7 @@ body {
 
 .a-under-input {
     color: #fff;
+    cursor: pointer;
 }
 
 .top-left-container {
@@ -965,13 +1160,12 @@ body {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    /* gap: 48px; */
 }
 
 .footer-column-tittle {
     color: #fff;
     font-family: 'DM Sans';
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 24px;
     text-align: left;
@@ -980,12 +1174,13 @@ body {
 .footer-link {
     color: #fff;
     font-family: 'DM Sans';
-    font-size: 14px;
+    font-size: 0.88rem;
     font-weight: 400;
     line-height: 37px;
     text-align: left;
     padding-bottom: 16px;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .footer-column {
@@ -996,21 +1191,38 @@ body {
     width: 100%;
     height: 1px;
     background-color: #FFFF;
-    margin-top: 6%;
+    opacity: 0.5;
 }
 
 .footer-bottom-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 5px;
+    margin-bottom: 50px;
 }
 
 .footer-license {
     color: #FFFFFF;
     font-family: 'DM Sans';
-    font-size: 14px;
+    font-size: 0.88rem;
     font-weight: 400;
     line-height: 21px;
     text-align: left;
+}
+
+@media (max-width:1380px) {
+    .footer-link {
+        line-height: 30px;
+    }
+
+    .footer-column-tittle {
+        margin-bottom: 15px;
+    }
+}
+
+@media (max-height:800px) {
+    .footer-top-content {
+        padding-top: 20px;
+    }
 }
