--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ html {
 .navbar {
     height: 72px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     width: 100vw;
     position: fixed;
     background-color: #00353BFF;
@@ -53,6 +53,7 @@ html {
     align-items: center;
     margin-top: 0px;
     padding: 0px;
+    padding-left: calc(50% - 191px);
 }
 
 .menu_li:hover {
@@ -71,7 +72,6 @@ html {
     justify-content: flex-end;
     gap: 25px;
     position: relative;
-    padding-left: calc(50% - 458px - 80px);
     height: 100%;
     color: #fff;
     font-family: 'DM Sans', sans-serif;
@@ -87,6 +87,17 @@ html {
 .search-container {
     display: flex;
     align-items: center;
+}
+
+.search-input {
+    width: 150px;
+    border-radius: 10px;
+    height: 25px;
+    margin-left: 8px;
+    color: #00353B;
+    outline: none;
+    border: none;
+    padding-left: 10px;
 }
 
 .sign-up {
