--- a/style.css
+++ b/style.css
@@ -100,6 +100,27 @@ html {
     padding-left: 10px;
 }
 
+.suggestions-ul {
+    position: fixed;
+    width: 150px;
+    height: auto;
+    margin-top: 160px;
+    background-color: #fff;
+    color: #00353B;
+    list-style-type: none;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-bottom: 0px;
+    min-height: 120px;
+}
+
+.suggestions-li {
+    text-decoration: none;
+    height: 20px;
+}
+
 .sign-up {
     color: #00353BFF;
     background-color: #fff;
